@@ -98,6 +98,8 @@
 - updated: `middleware`, now Total.js supports new declaration `F.middleware(function($) {})`
 - updated: `F.wait()` HTML template
 - updated: JavaScript compressor, now optimizes multiple `var` declarations
+- updated: `CORS()` without arguments for all routes, methods and origins
+- updated: `CORS()` tries to join multiple same preferences to one
 
 - fixed: mail attachments
 - fixed: mail `message.manually()`
